@@ -45,7 +45,7 @@ public class AppleseedPlayerListener extends PlayerListener {
 			// player is trying to fertilize a tree
 			handleFertilzeEvent(event, player, iStack, block);
 		
-		else if(blockType == Material.LOG && iStack.getType() == Appleseed.Config.WandItem)
+		else if(blockType == Material.LOG && (new AppleseedItemStack(iStack.getType())) == Appleseed.Config.WandItem)
 			// player used the wand on a tree
 			handleWandEvent(event, player, iStack, block);
     }
