@@ -1,7 +1,8 @@
 Version 0.5.5 ()
     * Non-integer ItemLikelihood values allowed
     * Textual name of wand item can be used instead of item number
-    
+    * TODO: Per player cap on how many trees can be planted
+    * TODO: Allow customizable fertilizer type
 
 Version 0.5.0 (05/30/2011)
     * Added support for signs on trees
@@ -10,7 +11,7 @@ Version 0.5.0 (05/30/2011)
     * Added IntervalsBeforeFertilizer parameter to tree type config
 
 Version 0.4.1 (05/29/2011)
-    * Small tweak to handling of "Wrong location" exception.
+    * Small tweak to handling of "Wrong location" exception
 
 Version 0.4.0 (05/26/2011)
     * Added config option to enforce minimum distance between trees
